<resources>
    <string name="app_name">Personal Finances</string>
    <string name="accounts">Accounts</string>
    <string name="categories">Categories</string>
    <string name="transactions">Transactions</string>
    <string name="menu">Menu</string>
    <string name="all_accounts">All accounts</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="category">Category</string>
    <string name="add_a_new_category">Add a new category</string>
    <string name="name">Name</string>
    <string name="new_category">New Category</string>
    <string name="confirm">Confirm</string>
    <string name="color">Color</string>
    <string name="icon">Icon</string>
    <string name="required_field">Required field</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_new_account">add_account</string>
    <string name="account_name">Account Name</string>
    <string name="account_balance">Account Balance</string>
    <string name="balance">Balance</string>
    <string name="new_account">New Account</string>
    <string name="create_transaction">Create transaction</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="transaction_amount">Transaction amount</string>
    <string name="transaction_date">Transaction date</string>
    <string name="from_this_account">From this account</string>
    <string name="to_this_account">To this account</string>
    <string name="choose_account">Choose account</string>
    <string name="choose_the_recipient">Choose the recipient</string>
    <string name="edit_account">Edit Account</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Account</string>
    <string name="transfer">Transfer</string>
    <string name="edit">Edit</string>
    <string name="category_color">Category Color</string>
    <string name="icon_color">Icon Color</string>
    <string name="edit_cat">Edit Category</string>
    <string name="delete_category">Delete Category</string>
    <string name="expenses">Expenses</string>
    <string name="make_transfer">Transfer to another account</string>
    <string name="transfer_from">Transfer from</string>
</resources>