<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bot_nav_accounts"
        android:icon="@drawable/account_credit_card_24"
        android:title="@string/accounts"
        android:orderInCategory="1"
        android:enabled="true"
        />
    <item
        android:id="@+id/bot_nav_categories"
        android:icon="@drawable/utils_category_24"
        android:title="@string/categories"
        android:orderInCategory="2"
        android:enabled="true"
        />
    <item
        android:id="@+id/bot_nav_transactions"
        android:icon="@drawable/utils_transaction_24"
        android:title="@string/transactions"
        android:orderInCategory="3"
        android:enabled="true"
        />
</menu>