<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".bottomsheets.MakeTransactionFragment">

    <TextView
        android:id="@+id/create_transaction_textView"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_transaction"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/create_transaction_confirmBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose_transaction_from_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/from"
        app:layout_constraintTop_toBottomOf="@+id/create_transaction_textView" />

    <Spinner
        android:id="@+id/choose_transaction_from"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_transaction_from_label" />

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/choose_transaction_to_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintTop_toBottomOf="@+id/choose_transaction_from" />

    <Spinner
        android:id="@+id/choose_transaction_to"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_transaction_to_label" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/create_transaction_amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/transaction_amount"
        app:hintTextAppearance="@style/Widget.Material3.MaterialTimePicker.Display.TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_transaction_to">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_transaction_amount_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="numberSigned"
            style="@style/MaterialAlertDialog.Material3.Body.Text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/transaction_date"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_transaction_amount_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_transaction_confirmBtn"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_centerHorizontal="true"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/confirm"
        app:icon="@drawable/ic_outline_check_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>