<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".fragments.AccountBottomSheetFragment">

    <com.google.android.material.button.MaterialButton
        android:gravity="center_vertical"
        android:id="@+id/edit_category_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/edit"
        app:cornerRadius="0dp"
        app:icon="@drawable/utils_settings_24"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:gravity="center_vertical"
        android:id="@+id/transfer_category_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/transfer"
        app:cornerRadius="0dp"
        app:icon="@drawable/utils_transaction_24"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_category_btn" />

    <com.google.android.material.button.MaterialButton
        android:gravity="center_vertical"
        android:id="@+id/delete_category_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/delete"
        app:cornerRadius="0dp"
        app:icon="@drawable/utils_delete_24"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transfer_category_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>