<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/addCat_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/toolbar_confirm"
            app:navigationIcon="@drawable/utils_close_24"
            app:title="@string/new_category" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCat_appBarLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addCat_txtLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/name"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true"
            app:helperTextTextColor="@color/m3_ref_error_error40"
            app:hintTextAppearance="@style/Widget.Material3.MaterialTimePicker.Display.TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addCat_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:id="@+id/addCat_colorBtn"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_margin="10dp"-->
        <!--            android:hint="@string/color"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/addCat_txtLayoutName">-->

        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:id="@+id/addCat_color"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent"-->
        <!--                app:layout_constraintEnd_toEndOf="parent"-->
        <!--                app:layout_constraintStart_toStartOf="parent"-->
        <!--                app:layout_constraintTop_toTopOf="parent" />-->
        <!--        </com.google.android.material.textfield.TextInputLayout>-->

        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:id="@+id/addCat_iconBtn"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_margin="10dp"-->
        <!--            android:hint="@string/icon"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/addCat_colorBtn">-->

        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:id="@+id/addCat_icon"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent"-->
        <!--                app:layout_constraintEnd_toEndOf="parent"-->
        <!--                app:layout_constraintStart_toStartOf="parent"-->
        <!--                app:layout_constraintTop_toTopOf="parent" />-->
        <!--        </com.google.android.material.textfield.TextInputLayout>-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addCat_iconBtn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/icon"
            app:layout_constraintEnd_toEndOf="@+id/addCat_txtLayoutName"
            app:layout_constraintStart_toStartOf="@+id/addCat_txtLayoutName"
            app:layout_constraintTop_toBottomOf="@+id/addCat_txtLayoutName" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/addCat_colorBtn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/color"
            app:layout_constraintEnd_toEndOf="@+id/addCat_iconBtn"
            app:layout_constraintStart_toStartOf="@+id/addCat_iconBtn"
            app:layout_constraintTop_toBottomOf="@+id/addCat_iconBtn" />


        <!--        <Button-->
        <!--            android:id="@+id/addCat_colorBtn"-->
        <!--            style="@style/Widget.Material3.Button.OutlinedButton"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginEnd="5dp"-->
        <!--            android:text="@string/color"-->
        <!--            app:layout_constraintEnd_toStartOf="@+id/addCat_iconBtn"-->
        <!--            app:layout_constraintHorizontal_bias="0.5"-->
        <!--            app:layout_constraintHorizontal_chainStyle="spread"-->
        <!--            app:layout_constraintStart_toStartOf="@+id/addCat_txtInpLayoutIcon"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/addCat_txtInpLayoutIcon" />-->

        <!--        <Button-->
        <!--            android:id="@+id/addCat_iconBtn"-->
        <!--            style="@style/Widget.Material3.Button.OutlinedButton"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="5dp"-->
        <!--            android:text="@string/icon"-->
        <!--            app:layout_constraintEnd_toEndOf="@+id/addCat_txtInpLayoutIcon"-->
        <!--            app:layout_constraintHorizontal_bias="0.5"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/addCat_colorBtn"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/addCat_txtInpLayoutIcon" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>